# AnchorCounter

./: README.md
anchor-counter/: Anchor.toml  package.json  rustfmt.toml
anchor-counter/app/: .eslintrc.json  package-lock.json  package.json
anchor-counter/app/app/: layout.tsx  page.tsx
anchor-counter/app/app/components/: AppBar.tsx  Decrement.tsx  Increment.tsx  Initialize.tsx  WalletContextProvider.tsx
anchor-counter/app/app/config/: index.tsx
anchor-counter/app/app/constants/: index.ts
anchor-counter/app/app/context/: AutoConnectProvider.tsx  CounterContextProvider.tsx  NetworkConfigProvider.tsx  WalletContextProvider.tsx  Web3ModalProvider.tsx
anchor-counter/programs/anchor-counter/: Cargo.toml
anchor-counter/programs/anchor-counter/src/: constants.rs  error.rs  lib.rs
anchor-counter/programs/anchor-counter/src/instructions/: counter.rs  lottery.rs  mod.rs  movie_review.rs  play.rs  setup_game.rs
anchor-counter/programs/anchor-counter/src/state/: counter.rs  game.rs  lottery.rs  mod.rs  movie_review.rs
anchor-counter/tests/: anchor-counter.ts  lottery.ts  movie_review.ts  tic-tac-toe.ts
