[package]
name = "anchor-counter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
num-traits = "0.2"
num-derive = "0.3"
solana-program = "=1.18.20"
spl-token = "4.0.0"
anchor-spl = "0.29.0"
